# LayerGuard-RAG

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.py  eval_stage2_metrics.py  handoff.md  poisonedrag_eval_handoff.md  pyproject.toml  requirements.txt  stage2_handoff.md  test_stage2_nq.py  traintest_templates_handoff.md
Stage3/: README.md  stage3.py  test_stage3.py
eval/: analyze_failures.py  metrics.py
results/: stage2_metrics.json  stage3_eval_full.json
scripts/: build_index.py  fetch_data.py  gen_stage1_data.py  prepare_nq.py  reproduce_all.py  run_experiments.py  train_stage1.py  tune_thresholds.py  upload_data.py
src/: generator.py  retriever.py  vanilla_rag.py
src/attacks/: generate_train_data.py  inject_poison.py  poisonedrag_attack.py
src/baselines/: perplexity_filter.py  raguard_zkip.py
src/defense/: pipeline.py  stage1_classifier.py  stage2_trust.py  stage3_nli.py
stage_3_jincheng/: README.md  RESULTS.md  __init__.py  defended_pipeline.py  device.py  isolated_stage3_test.py  run_eval.py  stage3_nli.py
