[project]
name = "layerguard-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pip>=26.1.1",
    "pre-commit>=4.6.0",
    "sentence-transformers>=5.5.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]
