[project]
name = "layerguard-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pip>=26.1.1",
    "pre-commit>=4.6.0",
    "sentence-transformers>=5.5.0",
    "torch>=2.11.0",
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.14.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pip>=26.1.1",
    "pre-commit>=4.6.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
]
